traefik-system/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
spec:
  externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - port: 80
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
    - port: 9000
      protocol: TCP
      name: dashboard
  type: LoadBalancer
