traefik-system/wol-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wol-api
  namespace: tsebra-home
spec:
  selector:
    matchLabels:
      app: wol-api
  replicas: 1
  template:
    metadata:
      labels:
        app: wol-api
    spec:
      nodeName: tsebra-k8s
      hostNetwork: true #needs to be on the same network as the server
      containers:
        - image: fbrak/docker-wol-api:arm64 # custom image build for arm based on https://github.com/rix1337/WakeOnLAN-API/blob/main/docker/Dockerfile
          name: wol-api
          ports:
            - containerPort: 8111
---
apiVersion: v1
kind: Service
metadata:
  name: wol-api
  namespace: tsebra-home
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8111
  type: ClusterIP
