traefik-system/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: tsebra-home
spec:
  defaultBackend:
    service:
      name: traefik
      port:
        number: 9000
  tls:
    - hosts:
        - traefik-dashboard.tsebra-home.de
